--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- checkout: self
+  clean: false 
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- powershell: |
+    &"$(System.DefaultWorkingDirectory)/tests/runPSScriptAnalyzer.ps1"
+  displayName: 'Run PSScriptAnalyzer'
+
+- powershell: |
+    &"$(System.DefaultWorkingDirectory)/tests/_InvokeTests.ps1"
+  displayName: 'Run Pester Tests'
