--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,12 @@ steps:
     &"$(System.DefaultWorkingDirectory)/tests/_InvokeTests.ps1"
   displayName: 'Run Pester Tests'
 
-- powershell: |
-    &"$(System.DefaultWorkingDirectory)/noddyModule/updateVersionNumber.ps1"
-  displayName: 'Update Module Version Number'
-  arguments: -VersionNumber $(Build.BuildId)
+- task: PowerShell@2
+  inputs:
+    targetType: 'filePath'
+    filePath: "$(System.DefaultWorkingDirectory)/noddyModule/updateVersionNumber.ps1"
+    displayName: 'Update Module Version Number'
+    arguments: "-VersionNumber $(Build.BuildId)"
 
 - task: PublishTestResults@2
   displayName: 'Publish Test Results'
